# ZGL_ESP32_DataBoard

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
bsp/: bsp.h
bsp/adc_func/: adc_func.c  adc_func.h
bsp/dac_func/: dac_func.c  dac_func.h
bsp/uart_func/: uart_func.c  uart_func.h
components/lvgl/: Kconfig
components/lvgl/src/: lv_conf_internal.h
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_touch/: xpt2046.c
main/: CMakeLists.txt  guiTask.c  guiTask.h  infoType.h  main.c  main.h  wifiTask.c
main/GUI/: ui.c  ui.h  ui_font_seguisb12.c  ui_font_seguisb16.c  ui_font_seguisb20.c  ui_img_back_png.c  ui_img_nowifi_png.c  ui_img_refresh_png.c  ui_img_settings_png.c  ui_img_wlan_png.c
main/task/: guiTask.c  wifiTask.c  wifiTask.h  wifi_func.c  wifi_func.h
